[package]
name = "lunify"
authors = ["Lucas Pütz"]
description = "A crate for converting Lua bytecode to different versions and formats"
categories = ["encoding"]
keywords = ["lua", "bytecode"]
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/vE5li/lunify"
repository = "https://github.com/vE5li/lunify"
readme = "README.md"
license = "MIT"
exclude = ["test_files/", "LICENSE.md", "rustfmt.toml"]

[dependencies]
serde = { version = "1.0.144", features = ["serde_derive"], optional = true }
mlua = { version = "0.8", features = ["lua51", "vendored"], optional = true }

[features]
debug = []
integration = ["mlua"]
